--- a/style/style.css
+++ b/style/style.css
@@ -23,10 +23,6 @@ header {
   color: black;
   font-variant-caps: all-small-caps;
   font-weight: 500;
-  /*font-family: $main-font;
-  color: black;
-  font-variant-caps: all-small-caps;
-  font-weight: 500;*/
 }
 
 .dropdown-item {
@@ -34,10 +30,6 @@ header {
   color: black;
   font-variant-caps: all-small-caps;
   font-weight: 500;
-  /*font-family: $main-font;
-  color: black;
-  font-variant-caps: all-small-caps;
-  font-weight: 500;*/
 }
 
 .fa-brands {
@@ -50,10 +42,6 @@ h2 {
   color: black;
   font-variant-caps: all-small-caps;
   font-weight: 500;
-  /*font-family: $main-font;
-      color: black;
-      font-variant-caps: all-small-caps;
-      font-weight: 500;*/
   list-style: none;
   padding: 10px;
   background-color: white;
@@ -67,10 +55,6 @@ h3 {
   color: black;
   font-variant-caps: all-small-caps;
   font-weight: 500;
-  /*font-family: $main-font;
-      color: black;
-      font-variant-caps: all-small-caps;
-      font-weight: 500;*/
   list-style: none;
   padding: 10px;
   background-color: white;
@@ -81,8 +65,6 @@ h3 {
 .banner a img {
   width: 100%;
   object-fit: cover;
-  /*width: 100%;
-  object-fit: cover;*/
   border: solid black 1px;
   border-radius: 3px;
 }
@@ -102,8 +84,6 @@ h3 {
 .tienda {
   display: flex;
   justify-content: space-evenly;
-  /*display: flex;
-  justify-content: space-evenly;*/
   margin: 0;
   padding: 0;
 }
@@ -111,8 +91,6 @@ h3 {
 .tienda-productos {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax 600px, 1fr);
-  /*display: grid;
-  grid-template-columns: repeat(auto-fit, minmax (600px, 1fr));*/
   margin: 10px;
   padding: 10px;
 }
@@ -123,8 +101,6 @@ h3 {
   list-style: none;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  /*display: grid;
-  grid-template-columns: repeat(3, 1fr);*/
 }
 
 .productos li {
@@ -143,8 +119,6 @@ h3 {
   padding: 0;
   width: 100%;
   object-fit: cover;
-  /*width: 100%;
-  object-fit: cover;*/
   align-items: center;
   transition: 1s;
 }
@@ -153,8 +127,6 @@ h3 {
   padding: 10px;
   display: flex;
   justify-content: center;
-  /*display: flex;
-  justify-content: center;*/
   margin: 10px;
 }
 
@@ -163,7 +135,6 @@ h3 {
   margin: 0;
   padding: 0;
   align-content: center;
-  align-items: center;
   border: solid black 1px;
   border-radius: 3px;
   overflow: hidden;
@@ -176,16 +147,12 @@ h3 {
   padding: 0;
   width: 100%;
   object-fit: cover;
-  /* width: 100%;
-   object-fit: cover;*/
   transition: 2s;
 }
 
 #styling {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax 600px, 1fr);
-  /*display: grid;
-  grid-template-columns: repeat(auto-fit, minmax (600px, 1fr));*/
   background-color: #f5f5f5;
   padding: 10px;
   margin: 20px;
@@ -194,8 +161,6 @@ h3 {
 .style-clips {
   display: flex;
   justify-content: space-around;
-  /*display: flex;
-  justify-content: space-around;*/
 }
 
 .clips {
@@ -218,16 +183,12 @@ h3 {
 .looks {
   display: flex;
   justify-content: space-around;
-  /*display: flex;
-  justify-content: space-around;*/
   row-gap: 10px;
 }
 
 .looks-fotos {
   display: flex;
   justify-content: space-around;
-  /* display: flex;
-  justify-content: space-around;*/
 }
 
 .looks-fotos a {
@@ -239,8 +200,6 @@ h3 {
 .looks-fotos a img {
   width: 250px;
   object-fit: cover;
-  /*width: 250px;
-  object-fit: cover;*/
   border: solid black 1px;
   border-radius: 3px;
   transition: 1s;
@@ -271,8 +230,6 @@ h3 {
 .linkeventos {
   width: 100%;
   object-fit: cover;
-  /*width: 100%;
-  object-fit: cover;*/
 }
 
 #us {
@@ -292,8 +249,6 @@ h3 {
 .nosotros img {
   width: 100%;
   object-fit: cover;
-  /* width: 100%;
-  object-fit: cover;*/
 }
 
 .nosotros-texto {
@@ -341,10 +296,6 @@ h3 {
   color: black;
   font-variant-caps: all-small-caps;
   font-weight: 500;
-  /*font-family: $main-font;
-      color: black;
-      font-variant-caps: all-small-caps;
-      font-weight: 500;*/
 }
 
 .mb-3 label p {
@@ -352,17 +303,11 @@ h3 {
   color: black;
   font-variant-caps: all-small-caps;
   font-weight: 500;
-  /*font-family: $main-font;
-  color: black;
-  font-variant-caps: all-small-caps;
-  font-weight: 500; */
 }
 
 .grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  /*display: grid;
-  grid-template-columns: repeat(3, 1fr);*/
   border: solid black 1px;
   border-radius: 5px;
   margin: 10px;
@@ -380,10 +325,6 @@ h3 {
   color: black;
   font-variant-caps: all-small-caps;
   font-weight: 500;
-  /*font-family: $main-font;
-  color: black;
-  font-variant-caps: all-small-caps;
-  font-weight: 500;*/
   font-size: medium;
   background-color: white;
 }
@@ -408,10 +349,6 @@ h3 {
   color: black;
   font-variant-caps: all-small-caps;
   font-weight: 500;
-  /*font-family: $main-font;
-  color: black;
-  font-variant-caps: all-small-caps;
-  font-weight: 500;*/
 }
 
 .g-col-4 ul li button {
@@ -428,11 +365,47 @@ h3 {
   margin-bottom: 0;
 }
 
+/*.store {
+    background-color: $secondary-background;
+    padding: $padding-box;
+    margin: $margin-box; 
+ }
+ .catalogo {
+@include grid-repeat-secondary;
+gap: 10px;
+ }
+ .producto {
+    display: flex;
+    flex-direction: column;
+    border: $border;
+    border-radius: $radius;
+    margin: $margin-box;
+    align-items: center;
+    background-color: white;
+
+    img {
+        @include imagen (100%, cover);
+        object-fit: cover;
+        transition: 1.5s;
+        &:hover {
+            width: 80%;
+        }
+        }
+
+        div {
+     background-color: rgba(0, 0, 0, 0.122);
+     width: 100%;
+     top: 0;
+     bottom: 0;
+     p {
+        text-align: center;
+        color: white
+     }
+    }
+ }*/
 .camisas {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax 600px, 1fr);
-  /*display: grid;
-  grid-template-columns: repeat(auto-fit, minmax (600px, 1fr));*/
   padding: 10px;
   margin: 20px;
   background-color: #f5f5f5;
@@ -441,8 +414,6 @@ h3 {
 .tienda-camisas {
   display: flex;
   justify-content: space-evenly;
-  /*display: flex;
-  justify-content: space-evenly;*/
   margin: 0;
   padding: 0;
 }
@@ -450,8 +421,6 @@ h3 {
 .productos-camisas {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax 600px, 1fr);
-  /*display: grid;
-   grid-template-columns: repeat(auto-fit, minmax (600px, 1fr));*/
   margin: 10px;
   padding: 10px;
 }
@@ -462,8 +431,6 @@ h3 {
   list-style: none;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  /*display: grid;
-  grid-template-columns: repeat(3, 1fr);*/
 }
 
 .productos-items li {
@@ -482,16 +449,13 @@ h3 {
   padding: 0;
   width: 100%;
   object-fit: cover;
-  /*width: 100%;
-  object-fit: cover;*/
   transition: 1s;
+  align-items: center;
 }
 
 .eventos {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax 600px, 1fr);
-  /*display: grid;
-  grid-template-columns: repeat(auto-fit, minmax (600px, 1fr));*/
   padding: 10px;
   margin: 10px;
   background-color: #f5f5f5;
@@ -500,8 +464,6 @@ h3 {
 .articulo {
   display: flex;
   justify-content: space-around;
-  /*display: flex;
-  justify-content: space-around;*/
 }
 
 .articulo-cajas {
@@ -512,8 +474,6 @@ h3 {
 .articulo-cajas-footer {
   display: flex;
   justify-content: space-around;
-  /*display: flex;
-  justify-content: space-around;*/
 }
 
 .jevi-portada {
@@ -523,8 +483,6 @@ h3 {
 .jevi-portada img {
   width: 85%;
   object-fit: cover;
-  /*width: 85%;
-  object-fit: cover;*/
   border: solid black 1px;
   border-radius: 3px;
 }
@@ -532,16 +490,12 @@ h3 {
 .jevi-retratos {
   display: flex;
   justify-content: space-around;
-  /*display: flex;
-  justify-content: space-around;*/
   padding: 10px;
 }
 
 .jevi-retratos img {
   width: 40%;
   object-fit: cover;
-  /*width: 40%;
-  object-fit: cover;*/
   border: solid black 1px;
   border-radius: 3px;
 }
@@ -555,8 +509,6 @@ h3 {
 .jevi-tienda img {
   width: 420px;
   object-fit: cover;
-  /*width: 420px;
-  object-fit: cover;*/
   border: solid black 1px;
   border-radius: 3px;
 }
@@ -703,8 +655,6 @@ h3 {
     height: 100%;
     width: 100%;
     object-fit: cover;
-    /*width: 100%;
-    object-fit: cover;*/
     border-bottom: solid black 1px;
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
