se arreglo el responsive de las paginas de eventos y del footer, tambien se arreglo la jerarquizacion de los titulos en todas las paginas

--- a/style/style.css
+++ b/style/style.css
@@ -36,6 +36,19 @@ header {
   color: black;
 }
 
+h1 {
+  text-align: center;
+  font-family: "Rubik", sans-serif;
+  color: black;
+  font-variant-caps: all-small-caps;
+  font-weight: 500;
+  list-style: none;
+  padding: 10px;
+  background-color: white;
+  margin: 20px;
+  border: solid black 1px;
+}
+
 h2 {
   text-align: center;
   font-family: "Rubik", sans-serif;
@@ -321,11 +334,6 @@ h3 {
   border: solid black 1px;
   border-radius: 5px;
   margin: 20px;
-  font-family: "Rubik", sans-serif;
-  color: black;
-  font-variant-caps: all-small-caps;
-  font-weight: 500;
-  font-size: medium;
   background-color: white;
 }
 
@@ -353,6 +361,8 @@ h3 {
 
 .g-col-4 ul li button {
   border-radius: 3px;
+  outline: none;
+  padding: 10px;
 }
 
 .g-col-4 a img {
@@ -360,9 +370,9 @@ h3 {
   margin-left: 8px;
 }
 
-.g-col-4 h4 {
-  margin-left: 0;
-  margin-bottom: 0;
+.g-col-4 h2 {
+  border: none;
+  text-align: center;
 }
 
 /*.store {
@@ -520,9 +530,6 @@ gap: 10px;
   .g-col-4 {
     font-size: small;
   }
-  .g-col-4 h4 {
-    font-size: medium;
-  }
 }
 @media (max-width: 1190px) {
   .style-clips {
@@ -571,6 +578,14 @@ gap: 10px;
   .articulo-cajas-footer {
     flex-direction: column;
   }
+  .grid {
+    display: flex;
+    flex-direction: column;
+  }
+  .g-col-4 a img {
+    margin-top: 5px;
+    width: 20%;
+  }
 }
 @media (max-width: 500px) {
   .clips div iframe {
@@ -585,19 +600,15 @@ gap: 10px;
   .looks-fotos a img {
     width: 300px;
   }
-  .grid {
-    display: flex;
-    flex-direction: column;
-  }
-  .g-col-4 a img {
-    margin-top: 5px;
-    width: 20%;
-  }
   .jevi-tienda img {
     width: 350px;
   }
   .jevi-retratos img {
     width: 50%;
+  }
+  .articulo {
+    flex-direction: column-reverse;
+    align-items: center;
   }
 }
 @media (max-width: 390px) {
@@ -684,16 +695,17 @@ gap: 10px;
   .jevi-retratos img {
     width: 55%;
   }
+  .jevi-retratos {
+    flex-direction: column;
+    gap: 10px;
+  }
+  .jevi-retratos img {
+    width: 80%;
+  }
 }
 @media (max-width: 350px) {
   .nosotros-texto p {
     font-size: small;
-  }
-  .jevi-retratos {
-    flex-direction: column;
-  }
-  .jevi-retratos img {
-    width: 80%;
   }
 }
 @media (max-width: 780px) {
