--- a/scss/style.scss
+++ b/scss/style.scss
@@ -52,6 +52,15 @@ header {
 .fa-brands {
     color: black;
 }
+h1 {
+    text-align: center;
+    @include font-style;
+    list-style: none;
+    padding: $padding-box;
+    background-color: $main-background;
+    margin: $margin-box;
+    border: $border;
+}
 h2 {
     text-align: center;
     @include font-style;
@@ -281,8 +290,6 @@ list-style: none;
     border: $border;
     border-radius: 5px; 
     margin: $margin-box;
-    @include font-style;
-    font-size: medium;
     background-color: $main-background;
  }
  .g-col-4 p {
@@ -302,14 +309,16 @@ list-style: none;
  }
  .g-col-4 ul li button{
     border-radius: $radius;
+    outline: none;
+    padding: $padding-box
  }
  .g-col-4 a img {
     width: 20%;
     margin-left: 8px;
  }
- .g-col-4 h4 {
-    margin-left: 0;  
-    margin-bottom: 0;
+ .g-col-4 h2 {
+    border: none;
+text-align: center
  }
  /*.store {
     background-color: $secondary-background;
@@ -440,9 +449,6 @@ gap: 10px;
 .g-col-4 {
     font-size: small  
 }
-.g-col-4 h4 {
-    font-size: medium
-}
 }
 @media (max-width:1190px) {
     .style-clips {
@@ -490,6 +496,14 @@ gap: 10px;
     .articulo-cajas-footer {
         flex-direction: column;
     }
+    .grid {
+        display: flex;
+        flex-direction: column;
+    }
+    .g-col-4 a img{
+        margin-top: 5px;
+        width: 20%;
+    }
 }
 @media (max-width:500px){
     .clips div iframe{
@@ -504,19 +518,16 @@ gap: 10px;
 .looks-fotos a img {
     width: 300px;  
 }
-.grid {
-    display: flex;
-    flex-direction: column;
-}
-.g-col-4 a img{
-    margin-top: 5px;
-    width: 20%;
-}
+
 .jevi-tienda img {
     width: 350px;
 }
 .jevi-retratos img {
     width: 50%;
+}
+.articulo {
+    flex-direction: column-reverse;
+    align-items: center;
 }
 }
 @media (max-width:390px){
@@ -602,17 +613,18 @@ gap: 10px;
      .jevi-retratos img {
         width: 55%;
      }
+     .jevi-retratos {
+        flex-direction: column;
+        gap: 10px
+     }
+     .jevi-retratos img {
+        width: 80%;
+     }
 }
 @media (max-width:350px){
     .nosotros-texto p{
         font-size:small; 
     }
-    .jevi-retratos {
-        flex-direction: column;
-     }
-     .jevi-retratos img {
-        width: 80%;
-     }
 }
 @media (max-width:780px){
     .col iframe {
