--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,8 +40,10 @@ header {
 .collapse {
     justify-content: flex-end;
 }
-.navbar-brand img {
+.navbar-brand {
+img {
     width: 60px;
+} 
 }
 .nav-link {
     @include font-style;
@@ -79,13 +81,15 @@ h3 {
     margin: $margin-box;
     border: $border;
 }
-.banner a img {
-   @include imagen (100%, cover);
+.banner {
+    padding: 20px;
+   a {
+    img {
+    @include imagen (100%, cover);
     border: $border;
     border-radius: $radius; 
 }
-.banner {
-    padding: 20px;
+}
 }
 #shop {
     display: grid;
@@ -109,24 +113,24 @@ padding: 0;
     padding: 0;
     list-style: none;
     @include grid-repeat-secondary;
-}
-.productos li{
-    padding: 5px;
-    margin: 5px;
-    border: $border;
-    border-radius: $radius;
-    overflow: hidden;
-    background-color: $main-background;
-
-    & :hover {
-        width: 170px;
-    }
-    img {
-        margin: 0;
-        padding: 0;
-        @include imagen (100%, cover);
-        align-items: center;
-        transition: 1s;
+    li {
+        padding: 5px;
+        margin: 5px;
+        border: $border;
+        border-radius: $radius;
+        overflow: hidden;
+        background-color: $main-background;
+    
+        & :hover {
+            width: 170px;
+        }
+        img {
+            margin: 0;
+            padding: 0;
+            @include imagen (100%, cover);
+            align-items: center;
+            transition: 1s;
+        }
     }
 }
 .tienda-fisica {
@@ -166,15 +170,15 @@ padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-.clips div {
-    padding: $padding-box; 
-}
-.clips div iframe {
-    height: 315px;
-    width: 560px; 
-    border: $border;
-    border-radius: $radius;
+    div {
+     padding: $padding-box;
+    iframe {
+     height: 315px;
+     width: 560px; 
+     border: $border;
+    border-radius: $radius;   
+    }  
+    }
 }
 .looks {
     @include flex (flex, space-around);
@@ -182,20 +186,20 @@ padding: 0;
 }
 .looks-fotos {
     @include flex (flex, space-around);
-}
-.looks-fotos a {
- padding: 30px;
+    a {
+        padding: 30px;
 
- & :hover {
-    width: 200px;
- }
-
- img {
-    @include imagen (250px, cover);
-    border: $border;
-    border-radius: $radius;
-    transition: 1s;
- }
+        & :hover {
+           width: 200px;
+        }
+       
+        img {
+           @include imagen (250px, cover);
+           border: $border;
+           border-radius: $radius;
+           transition: 1s;
+        }  
+    }
 }
 #events {
     background-color: $secondary-background;
@@ -232,24 +236,24 @@ padding: 0;
     margin: $second-margin-box;
     border: $border;
     border-radius: $radius;
- }
- .nosotros img {
-    @include imagen (100%, cover);
+    img {
+        @include imagen (100%, cover); 
+    }
  }
  .nosotros-texto {
     position: absolute;
     background-color: rgba(0, 0, 0, 0.094);
     width: 100%;
     height: 100%;
- }
- .nosotros-texto p{
-    color: whitesmoke;
-    font-family: $main-font;
-    font-variant-caps: all-small-caps;
-    font-size:x-large;
-    font-weight: 800;
-    text-shadow: 1px 1px rgba(0, 0, 0, 0.437);
-    margin: $margin-box;
+    p {
+     color: whitesmoke;
+     font-family: $main-font;
+     font-variant-caps: all-small-caps;
+     font-size:x-large;
+     font-weight: 800;
+     text-shadow: 1px 1px rgba(0, 0, 0, 0.437);
+     margin: $margin-box;    
+    }
  }
  #contact{
     background-color: $secondary-background;
@@ -261,20 +265,28 @@ padding: 0;
  }
  .contacto-datos {
 list-style: none;
+li {
+    p {
+        @include font-style;  
+    }
+}
  }
- .col iframe {
-    width: 100%;
-    height: 100%;
-    width: 400px;
-    height: 400px;
-    border: $border;
-    border-radius: $radius;
+ .col {
+    iframe {
+        width: 100%;
+        height: 100%;
+        width: 400px;
+        height: 400px;
+        border: $border;
+        border-radius: $radius;
+    }
  }
- .contacto-datos li p {
-    @include font-style;
- }
- .mb-3 label p {
-    @include font-style;
+ .mb-3 {
+    label {
+        p {
+            @include font-style;
+          }
+    }
  }
  .grid {
     @include grid-repeat-secondary;
@@ -291,34 +303,39 @@ list-style: none;
     border-radius: 5px; 
     margin: $margin-box;
     background-color: $main-background;
- }
- .g-col-4 p {
-  margin-bottom: 0;
- }
- .g-col-4 ul{
-    padding: 0;
-    margin-bottom: 0;
-   }
- .g-col-4 ul li {
-    list-style: none;
-    padding: $padding-box;
- }
- .g-col-4 ul li a {
-    text-decoration: none;
-    @include font-style;
- }
- .g-col-4 ul li button{
-    border-radius: $radius;
-    outline: none;
-    padding: $padding-box
- }
- .g-col-4 a img {
-    width: 20%;
-    margin-left: 8px;
- }
- .g-col-4 h2 {
-    border: none;
-text-align: center
+    a {
+        text-decoration: none;
+        @include font-style; 
+        img {
+            width: 20%;
+            margin-left: 8px;
+        }   
+       }
+    h2 {
+        border: none;
+    text-align: center
+     }
+    ul {
+     padding: 0;
+     margin-bottom: 0;
+     li {
+        list-style: none;
+        padding: $padding-box;
+        p {
+            margin-bottom: 0;  
+        } 
+        button {
+            border-radius: $radius;
+            outline: none;
+            padding: $padding-box;
+        
+        a {
+         text-decoration: none;
+         @include font-style;    
+        } 
+        }  
+     }    
+    }
  }
  /*.store {
     background-color: $secondary-background;
@@ -379,26 +396,26 @@ gap: 10px;
      padding: 0;
      list-style: none;
      @include grid-repeat-secondary;
-    }
-    .productos-items li{
-     padding: 5px;
-     margin: 5px;
-     border: $border;
-     border-radius: $radius;
-     overflow: hidden;
-     background-color: $main-background;
-
-        & :hover {
-          width: 120%;
-        }
-
-        img {
-        margin: 0;
-        padding: 0;
-        @include imagen (100%, cover);
-        transition: 1s;
-        align-items: center;
-        }
+     li {
+        padding: 5px;
+        margin: 5px;
+        border: $border;
+        border-radius: $radius;
+        overflow: hidden;
+        background-color: $main-background;
+   
+           & :hover {
+             width: 120%;
+           }
+   
+           img {
+           margin: 0;
+           padding: 0;
+           @include imagen (100%, cover);
+           transition: 1s;
+           align-items: center;
+           }  
+     }
     }
     .eventos {
      @include grid-repeat;
@@ -416,31 +433,31 @@ gap: 10px;
     .articulo-cajas-footer {
      @include flex (flex, space-around);
     }
-    .jevi-portada{
+    .jevi-portada {
      padding: $padding-box;
-    }
-    .jevi-portada img {
-     @include imagen (85%, cover);
-     border: $border;
-     border-radius: $radius; 
+     img {
+        @include imagen (85%, cover);
+        border: $border;
+        border-radius: $radius;    
+     }
     }
     .jevi-retratos {
      @include flex (flex, space-around);
      padding: $padding-box;
-    }
-    .jevi-retratos img{
-     @include imagen (40%, cover);
-     border: $border;
-     border-radius: $radius; 
+     img {
+        @include imagen (40%, cover);
+        border: $border;
+        border-radius: $radius;   
+     }
     }
     .jevi-tienda{
      @include flex (flex, space-around);
      padding: $padding-box;
-    }
-    .jevi-tienda img {
-     @include imagen (420px, cover);
-     border: $border;
-     border-radius: $radius; 
+     img {
+        @include imagen (420px, cover);
+        border: $border;
+        border-radius: $radius;  
+     }
     }
 @media (max-width:780px){
 .tienda {
@@ -454,7 +471,7 @@ gap: 10px;
     .style-clips {
         flex-direction: column;  
        }
-    .clips div iframe{
+    .clips div iframe {
         height: 515px;
         width: 760px;   
     }
