--- a/style/style.css
+++ b/style/style.css
@@ -75,15 +75,14 @@ h3 {
   border: solid black 1px;
 }
 
+.banner {
+  padding: 20px;
+}
 .banner a img {
   width: 100%;
   object-fit: cover;
   border: solid black 1px;
   border-radius: 3px;
-}
-
-.banner {
-  padding: 20px;
 }
 
 #shop {
@@ -115,7 +114,6 @@ h3 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
-
 .productos li {
   padding: 5px;
   margin: 5px;
@@ -181,11 +179,9 @@ h3 {
   flex-direction: column;
   align-items: center;
 }
-
 .clips div {
   padding: 10px;
 }
-
 .clips div iframe {
   height: 315px;
   width: 560px;
@@ -203,7 +199,6 @@ h3 {
   display: flex;
   justify-content: space-around;
 }
-
 .looks-fotos a {
   padding: 30px;
 }
@@ -258,7 +253,6 @@ h3 {
   border: solid black 1px;
   border-radius: 3px;
 }
-
 .nosotros img {
   width: 100%;
   object-fit: cover;
@@ -270,7 +264,6 @@ h3 {
   width: 100%;
   height: 100%;
 }
-
 .nosotros-texto p {
   color: whitesmoke;
   font-family: "Rubik", sans-serif;
@@ -294,6 +287,12 @@ h3 {
 .contacto-datos {
   list-style: none;
 }
+.contacto-datos li p {
+  font-family: "Rubik", sans-serif;
+  color: black;
+  font-variant-caps: all-small-caps;
+  font-weight: 500;
+}
 
 .col iframe {
   width: 100%;
@@ -302,13 +301,6 @@ h3 {
   height: 400px;
   border: solid black 1px;
   border-radius: 3px;
-}
-
-.contacto-datos li p {
-  font-family: "Rubik", sans-serif;
-  color: black;
-  font-variant-caps: all-small-caps;
-  font-weight: 500;
 }
 
 .mb-3 label p {
@@ -336,43 +328,43 @@ h3 {
   margin: 20px;
   background-color: white;
 }
-
-.g-col-4 p {
-  margin-bottom: 0;
-}
-
-.g-col-4 ul {
-  padding: 0;
-  margin-bottom: 0;
-}
-
-.g-col-4 ul li {
-  list-style: none;
-  padding: 10px;
-}
-
-.g-col-4 ul li a {
+.g-col-4 a {
   text-decoration: none;
   font-family: "Rubik", sans-serif;
   color: black;
   font-variant-caps: all-small-caps;
   font-weight: 500;
 }
-
+.g-col-4 a img {
+  width: 20%;
+  margin-left: 8px;
+}
+.g-col-4 h2 {
+  border: none;
+  text-align: center;
+}
+.g-col-4 ul {
+  padding: 0;
+  margin-bottom: 0;
+}
+.g-col-4 ul li {
+  list-style: none;
+  padding: 10px;
+}
+.g-col-4 ul li p {
+  margin-bottom: 0;
+}
 .g-col-4 ul li button {
   border-radius: 3px;
   outline: none;
   padding: 10px;
 }
-
-.g-col-4 a img {
-  width: 20%;
-  margin-left: 8px;
-}
-
-.g-col-4 h2 {
-  border: none;
-  text-align: center;
+.g-col-4 ul li button a {
+  text-decoration: none;
+  font-family: "Rubik", sans-serif;
+  color: black;
+  font-variant-caps: all-small-caps;
+  font-weight: 500;
 }
 
 /*.store {
@@ -442,7 +434,6 @@ gap: 10px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
-
 .productos-items li {
   padding: 5px;
   margin: 5px;
@@ -489,7 +480,6 @@ gap: 10px;
 .jevi-portada {
   padding: 10px;
 }
-
 .jevi-portada img {
   width: 85%;
   object-fit: cover;
@@ -502,7 +492,6 @@ gap: 10px;
   justify-content: space-around;
   padding: 10px;
 }
-
 .jevi-retratos img {
   width: 40%;
   object-fit: cover;
@@ -515,7 +504,6 @@ gap: 10px;
   justify-content: space-around;
   padding: 10px;
 }
-
 .jevi-tienda img {
   width: 420px;
   object-fit: cover;
