se pusieron imagenes de banner dentro de los html de las paginas de tienda y eventos, se llenaron los documentos sass de los partials y se importaron al documento padre de estilos sass y se modifico el responsive de la pagina de eventos

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,669 +1,10 @@
-$main-font: "Rubik", sans-serif; 
-$main-background: white;
-$secondary-background: #f5f5f5;
-$border: solid black 1px;
-$radius: 3px; 
-$margin-box: 20px;
-$second-margin-box: 10px;
-$padding-box: 10px;
-@mixin grid-repeat {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax (600px, 1fr));   
-}
-@mixin grid-repeat-secondary {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-}
-@mixin font-style {
-    font-family: $main-font;
-    color: black;
-    font-variant-caps: all-small-caps;
-    font-weight: 500;
-}
-@mixin flex ($display, $justify) {
-    display: $display;
-    justify-content: $justify;
-}
-@mixin imagen ($width, $object){
-    width: $width;
-    object-fit: $object;
-}
-* { margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-header {
-    position: sticky;
-    top: 0;
-    z-index: 2;
-}
-.collapse {
-    justify-content: flex-end;
-}
-.navbar-brand {
-img {
-    width: 60px;
-} 
-}
-.nav-link {
-    @include font-style;
-}
-.dropdown-item {
-    @include font-style;
-}
-.fa-brands {
-    color: black;
-}
-h1 {
-    text-align: center;
-    @include font-style;
-    list-style: none;
-    padding: $padding-box;
-    background-color: $main-background;
-    margin: $margin-box;
-    border: $border;
-}
-h2 {
-    text-align: center;
-    @include font-style;
-    list-style: none;
-    padding: $padding-box;
-    background-color: $main-background;
-    margin: $margin-box;
-    border: $border;
-}
-h3 {
-    text-align: center;
-    @include font-style;
-    list-style: none;
-    padding: $padding-box;
-    background-color: $main-background;
-    margin: $margin-box;
-    border: $border;
-}
-.banner {
-    padding: 20px;
-   a {
-    img {
-    @include imagen (100%, cover);
-    border: $border;
-    border-radius: $radius; 
-}
-}
-}
-#shop {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax (1000px, 1fr));
-    background-color: $secondary-background;
-    padding: $padding-box;
-    margin: $margin-box;
-}
-.tienda {
-@include flex (flex, space-evenly);
-margin: 0; 
-padding: 0;
-}
-.tienda-productos{
-    @include grid-repeat;
-    margin: $second-margin-box;
-    padding: $padding-box;
-}
-.productos {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    @include grid-repeat-secondary;
-    li {
-        padding: 5px;
-        margin: 5px;
-        border: $border;
-        border-radius: $radius;
-        overflow: hidden;
-        background-color: $main-background;
-    
-        & :hover {
-            width: 170px;
-        }
-        img {
-            margin: 0;
-            padding: 0;
-            @include imagen (100%, cover);
-            align-items: center;
-            transition: 1s;
-        }
-    }
-}
-.tienda-fisica {
-    padding: $padding-box;
-    @include flex (flex, center);
-    margin: $second-margin-box;
-}
-.tienda-fisica-card {
-    display: flex;
-    margin: 0;
-    padding: 0;
-    align-content: center;
-    border: $border;
-    border-radius: $radius;
-    overflow: hidden;
-
-    & :hover {
-     width: 120%; 
-    }
-    img {
-        margin: 0;
-    padding: 0;
-    @include imagen (100%, cover);
-    transition: 2s;  
-    }
-}
-#styling {
-    @include grid-repeat;
-    background-color: $secondary-background;
-    padding: $padding-box;
-    margin: $margin-box;
-}
-.style-clips {
-    @include flex (flex, space-around);
-}
-.clips {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    div {
-     padding: $padding-box;
-    iframe {
-     height: 315px;
-     width: 560px; 
-     border: $border;
-    border-radius: $radius;   
-    }  
-    }
-}
-.looks {
-    @include flex (flex, space-around);
-   row-gap: 10px;
-}
-.looks-fotos {
-    @include flex (flex, space-around);
-    a {
-        padding: 30px;
-
-        & :hover {
-           width: 200px;
-        }
-       
-        img {
-           @include imagen (250px, cover);
-           border: $border;
-           border-radius: $radius;
-           transition: 1s;
-        }  
-    }
-}
-#events {
-    background-color: $secondary-background;
-    padding: $padding-box;
-    margin: $margin-box;
-}
-.col {
-    object-fit: cover;
-    align-items: center;
-    justify-content: center;
-}
-.col-img {
-    img {
-    width: 100%;
-    border: $border;
-    border-radius: $radius;
-    transition: 1s;
-    }
-    & :hover {
-        width: 80%; 
-    }
-}
-.linkeventos {
-    @include imagen (100%, cover);
- }
- #us {
-    background-color: $secondary-background;
-    padding: $padding-box;
-    margin: $margin-box;
- }
- .nosotros {
-    display: flex;
-    position: relative;
-    margin: $second-margin-box;
-    border: $border;
-    border-radius: $radius;
-    img {
-        @include imagen (100%, cover); 
-    }
- }
- .nosotros-texto {
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.094);
-    width: 100%;
-    height: 100%;
-    p {
-     color: whitesmoke;
-     font-family: $main-font;
-     font-variant-caps: all-small-caps;
-     font-size:x-large;
-     font-weight: 800;
-     text-shadow: 1px 1px rgba(0, 0, 0, 0.437);
-     margin: $margin-box;    
-    }
- }
- #contact{
-    background-color: $secondary-background;
-    padding: $padding-box;
-    margin: $margin-box; 
- }
- .row {
-    align-items: center;
- }
- .contacto-datos {
-list-style: none;
-li {
-    p {
-        @include font-style;  
-    }
-}
- }
- .col {
-    iframe {
-        width: 100%;
-        height: 100%;
-        width: 400px;
-        height: 400px;
-        border: $border;
-        border-radius: $radius;
-    }
- }
- .mb-3 {
-    label {
-        p {
-            @include font-style;
-          }
-    }
- }
- .grid {
-    @include grid-repeat-secondary;
-    border: $border;
-    border-radius: 5px;
-    margin: $second-margin-box;
-    background-color: $secondary-background;
- }
- .g-col-4 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    border: $border;
-    border-radius: 5px; 
-    margin: $margin-box;
-    background-color: $main-background;
-    a {
-        text-decoration: none;
-        @include font-style; 
-        img {
-            width: 20%;
-            margin-left: 8px;
-        }   
-       }
-    h2 {
-        border: none;
-    text-align: center
-     }
-    ul {
-     padding: 0;
-     margin-bottom: 0;
-     li {
-        list-style: none;
-        padding: $padding-box;
-        p {
-            margin-bottom: 0;  
-        } 
-        button {
-            border-radius: $radius;
-            outline: none;
-            padding: $padding-box;
-        
-        a {
-         text-decoration: none;
-         @include font-style;    
-        } 
-        }  
-     }    
-    }
- }
- /*.store {
-    background-color: $secondary-background;
-    padding: $padding-box;
-    margin: $margin-box; 
- }
- .catalogo {
-@include grid-repeat-secondary;
-gap: 10px;
- }
- .producto {
-    display: flex;
-    flex-direction: column;
-    border: $border;
-    border-radius: $radius;
-    margin: $margin-box;
-    align-items: center;
-    background-color: white;
-   
-    img {
-        @include imagen (100%, cover);
-        object-fit: cover;
-        transition: 1.5s;
-        &:hover {
-            width: 80%;
-        }
-        }
-   
-        div {
-     background-color: rgba(0, 0, 0, 0.122);
-     width: 100%;
-     top: 0;
-     bottom: 0;
-     p {
-        text-align: center;
-        color: white
-     }
-    }
- }*/
- .camisas {
-    @include grid-repeat;
-    padding: $padding-box;
-    margin: $margin-box;
-    background-color: $secondary-background;
- }
- .tienda-camisas {
-    @include flex (flex, space-evenly);
-    margin: 0; 
-    padding: 0;
-    }
- .productos-camisas{
-    @include grid-repeat; 
-     margin: $second-margin-box;
-     padding: $padding-box;
-    }
-    .productos-items {
-     margin: 0;
-     padding: 0;
-     list-style: none;
-     @include grid-repeat-secondary;
-     li {
-        padding: 5px;
-        margin: 5px;
-        border: $border;
-        border-radius: $radius;
-        overflow: hidden;
-        background-color: $main-background;
-   
-           & :hover {
-             width: 120%;
-           }
-   
-           img {
-           margin: 0;
-           padding: 0;
-           @include imagen (100%, cover);
-           transition: 1s;
-           align-items: center;
-           }  
-     }
-    }
-    .eventos {
-     @include grid-repeat;
-     padding: $padding-box;
-     margin: $second-margin-box;
-     background-color: $secondary-background;
-    }
-    .articulo {
-     @include flex (flex, space-around);
-    }
-    .articulo-cajas {
-     display: flex;
-     flex-direction: column;
-    }
-    .articulo-cajas-footer {
-     @include flex (flex, space-around);
-    }
-    .jevi-portada {
-     padding: $padding-box;
-     img {
-        @include imagen (85%, cover);
-        border: $border;
-        border-radius: $radius;    
-     }
-    }
-    .jevi-retratos {
-     @include flex (flex, space-around);
-     padding: $padding-box;
-     img {
-        @include imagen (40%, cover);
-        border: $border;
-        border-radius: $radius;   
-     }
-    }
-    .jevi-tienda{
-     @include flex (flex, space-around);
-     padding: $padding-box;
-     img {
-        @include imagen (420px, cover);
-        border: $border;
-        border-radius: $radius;  
-     }
-    }
-@media (max-width:780px){
-.tienda {
-    flex-direction: column;
-}
-.g-col-4 {
-    font-size: small  
-}
-}
-@media (max-width:1190px) {
-    .style-clips {
-        flex-direction: column;  
-       }
-    .clips div iframe {
-        height: 515px;
-        width: 760px;   
-    }
-    .looks {
-     flex-direction: column;
-    }
-    .looks-fotos a img {
-        width: 350px;
-    }
-    .col iframe {
-        width: 350px;
-        height: 350px;}
-     .camisas {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax (400px, 1fr)); 
-     }
-}
-    @media (max-width:840px){
-        .clips div iframe{
-            height: 315px;
-            width: 560px;   
-        } 
-        #styling {
-            display: flex;
-            flex-direction: column;
-        } 
-        .looks-fotos a img {
-            width: 250px;  
-        }
-    }
-    @media (max-width:680px){
-        .clips div iframe{
-            height: 250px;
-            width: 400px;  
-    }
-    .looks-fotos a img {
-        width: 180px;  
-    }
-    .articulo-cajas-footer {
-        flex-direction: column;
-    }
-    .grid {
-        display: flex;
-        flex-direction: column;
-    }
-    .g-col-4 a img{
-        margin-top: 5px;
-        width: 20%;
-    }
-}
-@media (max-width:500px){
-    .clips div iframe{
-        height: 180px;
-        width: 350px;  
-}
-.looks-fotos {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.looks-fotos a img {
-    width: 300px;  
-}
-
-.jevi-tienda img {
-    width: 350px;
-}
-.jevi-retratos img {
-    width: 50%;
-}
-.articulo {
-    flex-direction: column-reverse;
-    align-items: center;
-}
-}
-@media (max-width:390px){
-    .clips div iframe{
-        height: 180px;
-        width: 250px;  
-}
-.looks-fotos a img {
-    width: 220px;  
-}
-}
-@media (max-width:510px){
-    .col h3 {
-        padding: 5px;
-        font-size: x-small;
-    } 
-    .row {
-      row-gap: 2px;  
-    }
-}
-@media (max-width:345px){
-    .row {
-       flex-direction: column;
-    }
-    .col h3 {
-        font-size: medium;
-    }
-}
-@media (max-width:880px){
-    .nosotros-texto p{
-        font-size: medium;
-        font-weight: 800;
-    } 
-    .g-col-4 a img {
-        width: 30%;
-    } 
-}
-@media (max-width:700px){
-    .nosotros-texto p{
-        font-size: small;
-        font-weight: 800;
-    }  
-}
-@media (max-width:530px){
-    .nosotros-texto p{
-        font-size: x-small;
-        font-weight: 800;
-    }  
-}
-@media (max-width:430px){
-    .nosotros {
-        flex-direction: column;
-     }
-     .nosotros img {
-        height: 100%;
-        @include imagen (100%, cover);
-        border-bottom: solid black 1px;
-        border-bottom-left-radius: 3px;
-        border-bottom-right-radius: 3px;
-     }
-     .nosotros-texto {
-        position: relative;
-        background-color: white;
-        width: 100%;
-        height: 100%;
-     }
-     .nosotros-texto p{
-        color: black;
-        font-family: $main-font;
-        font-variant-caps: all-small-caps;
-        font-size:medium;
-        font-weight: 800;
-        text-shadow: none;
-        margin: 15px;
-     } 
-     .productos-items {
-        display: flex;
-        flex-direction: column;
-     }
-     .jevi-tienda img {
-        width: 250px;
-     }
-     .jevi-retratos img {
-        width: 55%;
-     }
-     .jevi-retratos {
-        flex-direction: column;
-        gap: 10px
-     }
-     .jevi-retratos img {
-        width: 80%;
-     }
-}
-@media (max-width:350px){
-    .nosotros-texto p{
-        font-size:small; 
-    }
-}
-@media (max-width:780px){
-    .col iframe {
-    width: 200px;
-    height: 200px;
-}
-}
-@media (max-width:545px){
-    .col iframe {
-    width: 400px;
-    height: 400px;
-}
-}
-@media (max-width:480px){
-    .col iframe {
-    width: 200px;
-    height: 200px;
-}
-}
-@media (max-width:420px){
-    .col iframe {
-    width: 150px;
-    height: 150px;
-}
-}
+@import 'base/reset';
+@import 'base/utilities';
+@import 'base/vars';
+@import 'components/footer';
+@import 'components/header';
+@import 'components/titles';
+@import 'layouts/index';
+@import 'layouts/tiendas';
+@import 'layouts/eventos.scss';
+@import 'layouts/mediaqueries';
