--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,63 @@
   box-sizing: border-box;
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  border: solid black 1px;
+  border-radius: 5px;
+  margin: 10px;
+  background-color: #f5f5f5;
+}
+
+.g-col-4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border: solid black 1px;
+  border-radius: 5px;
+  margin: 20px;
+  background-color: white;
+}
+.g-col-4 a {
+  text-decoration: none;
+  font-family: "Rubik", sans-serif;
+  color: black;
+  font-variant-caps: all-small-caps;
+  font-weight: 500;
+}
+.g-col-4 a img {
+  width: 20%;
+  margin-left: 8px;
+}
+.g-col-4 h2 {
+  border: none;
+  text-align: center;
+}
+.g-col-4 ul {
+  padding: 0;
+  margin-bottom: 0;
+}
+.g-col-4 ul li {
+  list-style: none;
+  padding: 10px;
+}
+.g-col-4 ul li p {
+  margin-bottom: 0;
+}
+.g-col-4 ul li button {
+  border-radius: 3px;
+  outline: none;
+  padding: 10px;
+}
+.g-col-4 ul li button a {
+  text-decoration: none;
+  font-family: "Rubik", sans-serif;
+  color: black;
+  font-variant-caps: all-small-caps;
+  font-weight: 500;
+}
+
 header {
   position: sticky;
   top: 0;
@@ -310,101 +367,6 @@ h3 {
   font-weight: 500;
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  border: solid black 1px;
-  border-radius: 5px;
-  margin: 10px;
-  background-color: #f5f5f5;
-}
-
-.g-col-4 {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  border: solid black 1px;
-  border-radius: 5px;
-  margin: 20px;
-  background-color: white;
-}
-.g-col-4 a {
-  text-decoration: none;
-  font-family: "Rubik", sans-serif;
-  color: black;
-  font-variant-caps: all-small-caps;
-  font-weight: 500;
-}
-.g-col-4 a img {
-  width: 20%;
-  margin-left: 8px;
-}
-.g-col-4 h2 {
-  border: none;
-  text-align: center;
-}
-.g-col-4 ul {
-  padding: 0;
-  margin-bottom: 0;
-}
-.g-col-4 ul li {
-  list-style: none;
-  padding: 10px;
-}
-.g-col-4 ul li p {
-  margin-bottom: 0;
-}
-.g-col-4 ul li button {
-  border-radius: 3px;
-  outline: none;
-  padding: 10px;
-}
-.g-col-4 ul li button a {
-  text-decoration: none;
-  font-family: "Rubik", sans-serif;
-  color: black;
-  font-variant-caps: all-small-caps;
-  font-weight: 500;
-}
-
-/*.store {
-    background-color: $secondary-background;
-    padding: $padding-box;
-    margin: $margin-box; 
- }
- .catalogo {
-@include grid-repeat-secondary;
-gap: 10px;
- }
- .producto {
-    display: flex;
-    flex-direction: column;
-    border: $border;
-    border-radius: $radius;
-    margin: $margin-box;
-    align-items: center;
-    background-color: white;
-
-    img {
-        @include imagen (100%, cover);
-        object-fit: cover;
-        transition: 1.5s;
-        &:hover {
-            width: 80%;
-        }
-        }
-
-        div {
-     background-color: rgba(0, 0, 0, 0.122);
-     width: 100%;
-     top: 0;
-     bottom: 0;
-     p {
-        text-align: center;
-        color: white
-     }
-    }
- }*/
 .camisas {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax 600px, 1fr);
@@ -682,6 +644,7 @@ gap: 10px;
   }
   .jevi-retratos img {
     width: 55%;
+    align-items: center;
   }
   .jevi-retratos {
     flex-direction: column;
@@ -689,6 +652,13 @@ gap: 10px;
   }
   .jevi-retratos img {
     width: 80%;
+    align-items: center;
+  }
+  .articulo-cajas p {
+    font-size: medium;
+  }
+  .articulo-cajas-footer p {
+    font-size: medium;
   }
 }
 @media (max-width: 350px) {
