--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -31,7 +31,9 @@
      li {
         list-style: none;
         padding: $padding-box;
+        @include font-style; 
         p {
+            @include font-style;   
             margin-bottom: 0;  
         } 
         button {
