se cambio informacion en la zona del footer sobre los objetivos del proyecto a modo de disclamer

--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -13,6 +13,9 @@
     border-radius: 5px; 
     margin: $margin-box;
     background-color: $main-background;
+    p {
+        @include font-style;  
+    }
     a {
         text-decoration: none;
         @include font-style; 
