se modificaron los botones del footer y el hoover de una imagen en la tienda del index

--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -43,6 +43,8 @@
             border-radius: $radius;
             outline: none;
             padding: $padding-box;
+            color: $secondary-background;
+            width: 80%;
         
         a {
          text-decoration: none;
