--- a/style/style.css
+++ b/style/style.css
@@ -66,6 +66,8 @@
   border-radius: 3px;
   outline: none;
   padding: 10px;
+  color: #f5f5f5;
+  width: 80%;
 }
 .g-col-4 ul li button a {
   text-decoration: none;
@@ -222,7 +224,7 @@ h3 {
   overflow: hidden;
 }
 .tienda-fisica-card :hover {
-  width: 120%;
+  width: 110%;
 }
 .tienda-fisica-card img {
   margin: 0;
